# arxiv

./: README.md  pyproject.toml
src/: amap_client.py
src/arxiv_tool/: __init__.py  config.py  main.py
static/: index.html
